--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,16 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 html,
 body {
   padding: 0;
-  margin: 0;
+  /* margin: auto;
+  width: 960px;
+  border: 1px solid;
+  border-color: white; */
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-* {
-  box-sizing: border-box;
+  background-color: #18181b;
+  color: #ffffff;
 }
